# actix_with_tokio_microservice

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
etc/api_server/: config.toml
etc/tls/: README.md
public/: 404.html  welcome.html
src/: backend_service.rs  web_server.rs
src/backend/: mod.rs  run.rs
src/backend/config/: mod.rs
src/shared_models/: request_response.rs
src/utils/: helpers.rs  mod.rs  rabbitmq.rs
src/web/: mod.rs  run.rs
src/web/config/: mod.rs
src/web/router/: file_server.rs  mod.rs  routes.rs
