[package]
name = "actix_with_tokio_microservice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web_server"
path = "src/web_server.rs"

[[bin]]
name = "backend_service"
path = "src/backend_service.rs"

[dependencies]
# tokio Dependencies
tokio = { version = "1.6.0", features = ["full"] }
tokio-threadpool = "0.1.18"
tokio-postgres="0.7.2"

thiserror = "1.0.15"
lapin = "1.7.1"
warp="0.3.1"

# General Dependencies
log = "0.4.14"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
async-std = { version = "1.9.0", features = ["attributes", "tokio03", "std"] }
openssl="0.10.34"
bincode="1.3.3"

# DB Dependencies
# diesel = { version = "1.4.6", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json", "64-column-tables"] }
r2d2_postgres = "0.18.0"
postgres = "0.19.1"

# Dev Dependencies
config = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
toml="0.5.8"
clap="2.33.3"
prost = "0.8.0"
prometheus="0.12.0"

# Actix Dependencies
actix = "0.12.0"
actix-cors = "0.5.4"
actix-http = "2.2.0"
actix-redis = "0.9"
# actix-rt = "2.2.0"
actix-service = "2.0.0"
actix-session = "0.4.1"
actix-web = { version = "3.3.2", features = ["openssl"] }
actix-web-httpauth = "0.5.1"
actix-web-prom = "0.5"

# Webserver Dependencies
http = "0.2.4"
tera = "1.10.0"
regex = "1.5.4"
jsonwebtoken = "7.2.0"
bytes = "1.0.1"
prost-derive = "0.8.0"
json = "0.12.4"

# Validators Dependencies
validator = "0.14.0"
validator_derive = "0.14.0"

# Datastore Dependencies
diesel = { version = "1.4.6", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json", "64-column-tables"] }
redis = { version = "0.20.1", features =["r2d2", "aio", "tokio-comp"]}
bigdecimal = "0.2.0"

# Async Dependencies
futures = "0.3.15"
r2d2="0.8.9"